2015-11-18 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonElectronLikelihoodDC14: updated confDir to latest (mc15_20150712)
	
2015-11-17 David Hohn <david.hohn@cern.ch>
	* update README with Top,2.3.33

2015-11-11 David Hohn <david.hohn@cern.ch>
	* debugging systematics: selected object containers have unique names now
	* now some new issue with tau truth particle links

2015-11-07 Harish Potti <harish.potti@cern.ch>
	* Added new GRL and IlumiCalc file 
	
2015-11-06 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: moving to getCorrectedMu method for PURWtool
	
2015-10-30 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added variable for dilep triggers and L1EM20 for data 2015
	* generic_config-*15.txt added corresponding strings to check match
	
2015-10-28 Harish Potti <hpotti@cern.ch>
	* Xsection13TeV_tth_sig_v1.txt Updated Xsections with Latest TopDataPreparation package
2015-10-26 Harish Potti <hpotti@cern.ch>
	* Xsection13TeV_tth_bkg_v1.txt Added all the missing xsections
	
2015-10-23 Rohin Narayan <narayan@cern.ch>
	* Changing higgsdecaymode to int type
	* Also changed the name of the branch to "higgsDecayMode" in tune with
	Run1 scheme. 

2015-10-22 Rohin T Narayan <narayan@cern.ch>
	* Adding higgs decay mode to the ntuples

2015-10-15 David Hohn <dhohn@cern.ch>
	* Add DuplicateSelector to veto double events, enabled for data
	* update data config for 2.3.30 as well
	* added ttHtautau xsections
	* protect data from TauEfficiencyCorrections

2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: split lepton SF into trigger and others 
	
2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* TruthSelector: lowered pt cut to 1 GeV and checking against geant leptons
	
2015-10-15 David Hohn <dhohn@cern.ch>
	* change name: electron_truthOrig ->electron_truthOrigin, consistent with muons and taus

2015-10-13 Harish Potti <harish.potti@cern.ch>