@@ -83,4 +83,5 @@ JETCLEAN LooseBad
 #TRIGDEC HLT_mu26_imedium 
 #TRIGMATCH HLT_mu26_imedium 
 TTHMULTILEP
+DUPLICATEVETO
 SAVE
